--- a/package.json
+++ b/package.json
@@ -26,15 +26,22 @@
     ]
   },
   "dependencies": {
+    "@react-three/drei": "^7.0.5",
+    "@react-three/fiber": "^7.0.1",
+    "clsx": "^1.1.1",
     "next": "latest",
+    "rc-slider": "^9.7.2",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "three": "^0.129.0"
   },
   "devDependencies": {
     "@testing-library/react": "^11.2.5",
     "@types/jest": "^26.0.23",
     "@types/node": "^14.14.25",
     "@types/react": "^17.0.1",
+    "@types/styled-jsx": "^2.2.8",
+    "@types/three": "^0.129.1",
     "@typescript-eslint/eslint-plugin": "^4.14.2",
     "@typescript-eslint/parser": "^4.14.2",
     "babel-jest": "^27.0.2",
@@ -46,6 +53,7 @@
     "jest": "^27.0.4",
     "jest-watch-typeahead": "^0.6.1",
     "lint-staged": "^10.0.10",
+    "next-transpile-modules": "^8.0.0",
     "prettier": "^2.0.2",
     "typescript": "^4.1.3"
   }
