Switch specified position

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,3 @@
 {
-  "cSpell.words": [
-    "Phong",
-    "Raycast",
-    "Raycaster",
-    "hemi",
-    "lerp"
-  ]
+  "cSpell.words": ["Phong", "Raycast", "Raycaster", "hemi", "lerp"]
 }
