--- a/package.json
+++ b/package.json
@@ -26,9 +26,10 @@
     ]
   },
   "dependencies": {
-    "@react-three/drei": "^7.0.5",
+    "@react-three/drei": "^7.6.0",
     "@react-three/fiber": "^7.0.1",
     "clsx": "^1.1.1",
+    "leva": "^0.9.13",
     "next": "latest",
     "rc-slider": "^9.7.2",
     "react": "^17.0.2",
