--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cSpell.words": ["Phong", "Raycast", "Raycaster", "hemi", "lerp"]
+  "cSpell.words": ["drei", "hemi", "lerp", "Phong", "Raycast", "Raycaster"]
 }
